--- a/README
+++ b/README
@@ -1,5 +1,9 @@
 * Make sure that guile-cl is installed, you may find it at
    https://gitorious.org/guile-cl
+
+* Make sure that guile-syntax-parse is installed, you may find it at
+   https://gitorious.org/guile-syntax-parse
+
 * Make sure to put this directory in guiles load path.
 
 then use the library by issueing
